escrevi o nome do arquivo errado

--- a/Paulo Jesus/index001.html
+++ b/Paulo Jesus/index001.html
@@ -10,7 +10,13 @@
 <body>
 
     <h1>Olá mundo</h1>
+
+    <h2>Já me livrei da maldição</h2>
+
     <p>Primeira alteração</p>
+
+    <p>Segunda alteração</p>
+    
   
 </body>
 </html>
