--- a/Paulo Jesus/index001.html
+++ b/Paulo Jesus/index001.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,16 +8,22 @@
     <title>Document</title>
 
 </head>
+
 <body>
 
+    <!--titulo do texto-->
     <h1>Olá mundo</h1>
 
+    <!--titulo 2 do texto-->
     <h2>Já me livrei da maldição</h2>
 
+    <!--primeiro paragrafo do texto-->
     <p>Primeira alteração</p>
 
+    <!--segundo paragrafo do texto-->
     <p>Segunda alteração</p>
-    
-  
+
+
 </body>
+
 </html>
