--- a/Paulo Jesus/index001.html
+++ b/Paulo Jesus/index001.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Olá Mundo!</title>
 
 </head>
 
@@ -22,6 +22,8 @@
 
     <!--segundo paragrafo do texto-->
     <p>Segunda alteração</p>
+
+    <p>Nova linha</p>
 
 
 
