--- a/Paulo Jesus/index001.html
+++ b/Paulo Jesus/index001.html
@@ -6,27 +6,33 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Olá Mundo!</title>
+    <style>
+        body {
+            background-color: aqua;
+            flex-direction: column;
+        }
+        h1 {
+            color: white;
+            
+        }
+
+
+    </style>
 
 </head>
 
 <body>
-
     <!--titulo do texto-->
     <h1>Olá mundo</h1>
-
     <!--titulo 2 do texto-->
     <h2>Já me livrei da maldição</h2>
-
     <!--primeiro paragrafo do texto-->
     <p>Primeira alteração</p>
-
     <!--segundo paragrafo do texto-->
     <p>Segunda alteração</p>
-
     <p>Nova linha</p>
-
-
-
+    <p>Segunda alteração</p>
+    <p>Nova linha</p>
 </body>
 
 </html>
