--- a/HTML/index001.html
+++ b/HTML/index001.html
@@ -11,12 +11,21 @@
             background-color: aqua;
             flex-direction: column;
         }
+
         h1 {
             color: white;
             font: 24pt arial;
         }
 
+        h2 {
+            color: white;
+            font: 20pt arial;
+        }
 
+        p {
+            color: white;
+            font: 14pt arial;
+        }
     </style>
 
 </head>
